[gd_scene load_steps=4 format=2]

[ext_resource path="res://CardUI/CardOrder.gd" type="Script" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="CardUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardOrder" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -714.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSelect" type="Button" parent="CardOrder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenCard" type="Tween" parent="CardOrder"]

[node name="area" type="Area2D" parent="CardOrder"]

[node name="shape" type="CollisionShape2D" parent="CardOrder/area"]
shape = SubResource( 1 )

[node name="TweenTab" type="Tween" parent="CardOrder"]

[connection signal="item_rect_changed" from="CardOrder" to="CardOrder" method="_on_CardOrder_item_rect_changed"]
[connection signal="mouse_entered" from="CardOrder" to="CardOrder" method="_on_CardOrder_mouse_entered"]
[connection signal="pressed" from="CardOrder/BtnSelect" to="CardOrder" method="_on_BtnSelect_pressed"]
[connection signal="mouse_entered" from="CardOrder/area" to="CardOrder" method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="CardOrder/area" to="CardOrder" method="_on_area_mouse_exited"]
